k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: collector
  labels:
    app: collector
spec:
  type: ClusterIP
  selector:
    app: collector
  ports:
    - name: http
      port: 80
      targetPort: 8000
