k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collector
spec:
  rules:
    - host: collector.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: collector
                port:
                  number: 80
